# ptm-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  METHODS.md  Makefile  README.md  ptm-pipeline.sh  pyproject.toml  test_docker.sh
.github/workflows/: ci.yml  docker.yml  pages.yml
TODO/: DONE_JG.md  DONE_align_with_prophosqua.md  DONE_harmonize_column_names.md  DONE_to_simplify.md  TODO_align_with_prophosqua.md  TODO_automaitic_Integration_tests.md  TODO_material_and_methods.md
docs/: _config.yml  index.md  methods.md  slides.md
inst/: zenodo_description.txt
src/ptm_pipeline/: __init__.py  clean.py  cli.py  config.py  discover.py  init.py  validate.py
template/: Makefile  Snakefile  SnakefileV2.smk  helpers.py
template/src/: Analysis_CorrectFirst_DEA.Rmd  Analysis_DPA_DPU.Rmd  Analysis_KinaseLibrary_GSEA.Rmd  Analysis_MEA.Rmd  Analysis_PTMSEA.Rmd  Analysis_n_to_c.Rmd  Analysis_seqlogo.Rmd  PTMSEA_analysis.Rmd  Vis_MEA.Rmd  combine_ptm_results.R  create_index.Rmd  create_top_index.Rmd  dea_utils.R  enrichment_viz_utils.R  feature_preparation.R  prep_kinaselib.R  prep_ptmsigdb.R  render_dpu_overview.R
test_data/: Makefile  create_test_PTM_example_analysis_v2.py  create_test_o40094_Fabienne.py  create_test_p40060_DanielGao.py  subset_utils.py
tests/: Makefile
